plugins {
    id "java"
    id "application"
    id "com.google.protobuf" version "0.9.4"
}
java { toolchain { languageVersion = JavaLanguageVersion.of(21) } }
dependencies {
    implementation "io.grpc:grpc-netty-shaded:1.64.0"
    implementation "io.grpc:grpc-protobuf:1.64.0"
    implementation "io.grpc:grpc-stub:1.64.0"
    compileOnly   "org.apache.tomcat:annotations-api:6.0.53"
    testImplementation "org.junit.jupiter:junit-jupiter:5.10.2"
}
protobuf {
    protoc { artifact = "com.google.protobuf:protoc:3.25.3" }
    plugins { grpc { artifact = "io.grpc:protoc-gen-grpc-java:1.64.0" } }
    generateProtoTasks { all()*.plugins { grpc {} } }
}
tasks.withType(JavaCompile)  { options.compilerArgs += ["--add-modules","jdk.incubator.vector"] }
tasks.withType(Test)         { jvmArgs "--add-modules","jdk.incubator.vector"; useJUnitPlatform() }
application {
    mainClass = "tonik.serve.TonikServer"
    applicationDefaultJvmArgs = ["--add-modules","jdk.incubator.vector","-Xmx8g"]
}
